NT-84: Cypher Gadget as modal view use jquery plugin for modal / add to libs Avoid rendering gadgets on page load set up sample adoc course to use modal gadgets fix .gitignore to not ignore changes in /libs dir

--- a/adocExample/adocExample.adoc
+++ b/adocExample/adocExample.adoc
@@ -1,3 +1,25 @@
+++++
+<script src="../libs/jquery.js"></script>
+<script src="../libs/jquery.modal.min.js"></script>
+<link rel="stylesheet" href="../libs/jquery.modal.min.css" type="text/css" media="screen" />
+<style>
+    .modal {
+        width: 770px;
+        padding: 10px;
+        margin: 0;
+    }
+    .blocker {
+        height: initial;
+    }
+</style>
+<script type="text/javascript">
+    function setGadgetUrl(sel) {
+        var $iframe = $(sel);
+        $iframe.attr("src", $iframe.data("src"));
+    }
+</script>
+++++
+
 === The Cypher Query Widget Example
 
 If you haven't installed Neo4j on your machine, the Cypher Query widget is there for you to interactively explore, learn and get comfortable with Cypher in a safe environment.
@@ -6,7 +28,9 @@ You can't break anything, and if so, just reset the temporary database to its or
 ==== Example Gadget Number One!
 
 ++++
-<iframe src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<a href="#ex1" onclick="setGadgetUrl('#ex1')" rel="modal:open">Gadget 1</a>
+<iframe id="ex1" style="display:none;" data-src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="850" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 ++++
 
 The different widgets use different datasets, depending on the task, but save your changes across sessions.
@@ -23,5 +47,6 @@ Thinking about them and writing & executing them incrementally helps you much mo
 ==== Example Gadget Number Two!
 
 ++++
-<iframe src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<a href="#ex2" onclick="setGadgetUrl('#ex2')" rel="modal:open">Gadget 2</a>
+<iframe id="ex2" style="display:none;" data-src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="850" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 ++++
